reformat from fractals to candles